--- a/ClipboardManager/ClipboardManager.csproj
+++ b/ClipboardManager/ClipboardManager.csproj
@@ -154,6 +154,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\edit.png" />
+    <Content Include="ClipboardManager.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\main.ico" />
     <None Include="Resources\sel-all.png" />
   </ItemGroup>
